# KaKa

course/src/: .gitignore  CMakeLists.txt  GoParser.g4  ParserVisitor.h  builtins.json  compile.sh  example.cpp  file.go  main.cpp  readme.md  starter.c  starter.cpp  test.go
course/src/examples/: big_list_creation.go  buble_sort.go  casts.go  fib.go  for_statements.go  interfaces.go  list_reverse.go  logical_and_or.go  loop.go  recursion.go  struct_methods.go  structs.go  sum.go  var_declarations.go
course/src/exec_additionals/: starter.cpp
course/src/ir_builder/: Context.cpp  Context.h  Error.cpp  Error.h  FunctionWrapper.cpp  FunctionWrapper.h  GoIrBuilder.cpp  GoIrBuilder.h  Package.cpp  Package.h  ParserVisitor.cpp  ParserVisitor.h  TypeWrapper.cpp  TypeWrapper.h  ValueWrapper.cpp  ValueWrapper.h
course/src/loader/: PackageJson.cpp  PackageJson.h
course/src/parser/: GoLexer.interp  GoParser.cpp  GoParser.h  GoParser.interp  GoParserBase.cpp  GoParserBaseListener.cpp  GoParserBaseListener.h  GoParserBaseVisitor.cpp  GoParserBaseVisitor.h  GoParserVisitor.cpp
course/src/parser/codegen/: GoLexer.cpp  GoLexer.h  GoLexer.interp  GoParser.cpp  GoParser.h  GoParser.interp  GoParserBaseVisitor.cpp  GoParserBaseVisitor.h  GoParserVisitor.cpp  GoParserVisitor.h
course/tex/: .gitignore  00-abstract.tex  00-title.tex  01-statement.tex  12-intro.tex  20-analysis.tex  30-design.tex  40-impl.tex  (+10 more)
lab1/: main.py  testbook.ipynb
lab2/: skуtchbook.ipynb
lab3/: book.ipynb
lab4/: book.ipynb  task.md  theory.md
tasks/: statement.md  task1.md  task2.md  task3.md
(+10 files in other folders)
